tup/parse/testdata/error/review/nested_errors.tup
# binary expression missing operand in function body
add = fn(x: Int, y: Int) Int { x + }

expecting "expression", got "}" at row 1, col 36

# binary expression missing operand in block expression
result = {
    x = 1
    y = 2
    x +
}

expecting "expression", got "}" at row 5, col 1

# binary expression missing operand in function call argument
_ = foo(1 + )

expecting "expression", got ")" at row 1, col 13

# nested call missing closing paren
_ = outer(inner(1, 2)

expecting ")", got "" at row 1, col 22

# binary expression missing operand in array initializer closure
_ = [4]Int { |i| i * }

expecting "expression", got "}" at row 1, col 22

# if expression missing then branch inside function body
check = fn(x: Int) Bool { if x > 0 }

expecting "block", got "}" at row 1, col 36
